2011-01-10  John W. Eaton  <jwe@octave.org>

	* general/private/__isequal__.m: Use builtin ("struct", ...) to
	convert objects to a structs to avoid possible overloading of
	the struct function.

2011-01-09  Rik  <octave@nomad.inbox5.com>

	* plot/orient.m, statistics/tests/kolmogorov_smirnov_test.m,
	strings/strtrunc.m: Correct failing tests due to change in
	capitalization of error strings from previous changeset.

2011-01-09  Rik  <octave@nomad.inbox5.com>

	* audio/lin2mu.m, audio/loadaudio.m, audio/mu2lin.m, audio/saveaudio.m,
	audio/wavwrite.m, deprecated/split.m, deprecated/values.m,
	general/accumarray.m, general/bitcmp.m, general/cell2mat.m,
	general/circshift.m, general/curl.m, general/divergence.m,
	general/genvarname.m, general/interpft.m, general/interpn.m,
	general/nextpow2.m, general/polyarea.m, general/repmat.m,
	general/rot90.m, general/rotdim.m, general/shiftdim.m,
	general/strerror.m, general/trapz.m, geometry/griddata.m,
	geometry/griddata3.m, geometry/griddatan.m, geometry/rectint.m,
	image/brighten.m, image/colormap.m, image/contrast.m, image/imagesc.m,
	image/imfinfo.m, image/imread.m, linear-algebra/commutation_matrix.m,
	linear-algebra/condest.m, linear-algebra/cross.m,
	linear-algebra/duplication_matrix.m, linear-algebra/isdefinite.m,
	linear-algebra/vech.m, miscellaneous/bincoeff.m, miscellaneous/cast.m,
	miscellaneous/compare_versions.m, miscellaneous/fileparts.m,
	miscellaneous/license.m, miscellaneous/private/__xzip__.m,
	miscellaneous/substruct.m, miscellaneous/unpack.m, miscellaneous/xor.m,
	optimization/sqp.m, pkg/get_forge_pkg.m, plot/backend.m,
	plot/contourc.m, plot/cylinder.m, plot/hidden.m, plot/hold.m,
	plot/orient.m, plot/private/__interp_cube__.m, plot/refreshdata.m,
	plot/subplot.m, plot/surface.m, plot/surfnorm.m, plot/text.m,
	plot/uimenu.m, polynomial/mkpp.m, polynomial/pchip.m,
	polynomial/polyfit.m, polynomial/ppval.m, signal/arch_fit.m,
	signal/arch_rnd.m, signal/arch_test.m, signal/arma_rnd.m,